<resources>
    <string name="app_name">LearNation</string>
    <string name="pn">Phone Number Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an one time password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to_you">Enter the OTP sent to you</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
</resources>